{
  "version": 4,
  "terraform_version": "0.12.12",
  "serial": 122,
  "lineage": "07b45ec2-2963-f0f2-cfb7-68d3e26f429d",
  "resources": [
    {
      "module": "module.ec2",
      "mode": "data",
      "type": "aws_subnet",
      "name": "selected",
      "provider": "module.ec2.provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:196269275163:subnet/subnet-0fec2bf7f243289bc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.2.0.0/27",
            "default_for_az": false,
            "id": "subnet-0fec2bf7f243289bc",
            "map_public_ip_on_launch": false,
            "owner_id": "196269275163",
            "state": "available",
            "tags": {
              "AccountType": "TFTrain",
              "Application": "webserver_hr",
              "Environment": "DEV",
              "Name": "ARA_DEV_ACCT-Public-A",
              "Type": "Public",
              "provider": "aws.aravind",
              "region": "ap-south-1"
            },
            "vpc_id": "vpc-09d04156cd79466d4"
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nateip",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-ab4ec157",
            "domain": "vpc",
            "id": "eipalloc-0d1662b1d6e1d53b0",
            "network_interface": "eni-03a6a411fe78f37c4",
            "private_dns": "ip-10-2-0-27.ap-south-1.compute.internal",
            "private_ip": "10.2.0.27",
            "public_dns": "ec2-13-235-230-29.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.235.230.29",
            "public_ipv4_pool": "amazon",
            "tags": {
              "AccountType": "TFTrain",
              "Application": "webserver_hr",
              "Environment": "DEV",
              "provider": "aws.aravind",
              "region": "ap-south-1"
            },
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-a3429779",
            "domain": "vpc",
            "id": "eipalloc-072b3e5eba1753e4b",
            "network_interface": "eni-0b5b8a93070c01fb3",
            "private_dns": "ip-10-2-0-43.ap-south-1.compute.internal",
            "private_ip": "10.2.0.43",
            "public_dns": "ec2-13-235-218-148.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.235.218.148",
            "public_ipv4_pool": "amazon",
            "tags": {
              "AccountType": "TFTrain",
              "Application": "webserver_hr",
              "Environment": "DEV",
              "provider": "aws.aravind",
              "region": "ap-south-1"
            },
            "vpc": true
          }
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-add33160",
            "domain": "vpc",
            "id": "eipalloc-06e5bc034642d7b32",
            "network_interface": "eni-0edbdcdd94ffee17a",
            "private_dns": "ip-10-2-0-68.ap-south-1.compute.internal",
            "private_ip": "10.2.0.68",
            "public_dns": "ec2-13-127-143-143.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.127.143.143",
            "public_ipv4_pool": "amazon",
            "tags": {
              "AccountType": "TFTrain",
              "Application": "webserver_hr",
              "Environment": "DEV",
              "provider": "aws.aravind",
              "region": "ap-south-1"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "jazz",
      "provider": "module.ec2.provider.aws.aravind",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a74bfeb190bd404f",
            "arn": "arn:aws:ec2:ap-south-1:196269275163:instance/i-014755e368e6391ae",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-014755e368e6391ae",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "deployer-key",
            "monitoring": false,
            "primary_network_interface_id": "eni-0ab9b2a0e5f509f9c",
            "private_dns": "ip-10-2-0-28.ap-south-1.compute.internal",
            "private_ip": "10.2.0.28",
            "public_dns": "ec2-13-127-131-245.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.127.131.245",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-05cc21cb2b0451e90",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0fec2bf7f243289bc",
            "tags": {
              "Name": "aravind-web"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-023c85fe928ddf0e3"
            ]
          },
          "depends_on": [
            "aws_security_group.subnet"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0ac80edac1bb1b580",
            "owner_id": "196269275163",
            "tags": {
              "AccountType": "TFTrain",
              "Application": "webserver_hr",
              "Environment": "DEV",
              "Name": "ARA_DEV_ACCT-IGW",
              "provider": "aws.aravind",
              "region": "ap-south-1"
            },
            "vpc_id": "vpc-09d04156cd79466d4"
          },
          "depends_on": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "natgateway",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d1662b1d6e1d53b0",
            "id": "nat-03f3a790ce2498bf5",
            "network_interface_id": "eni-03a6a411fe78f37c4",
            "private_ip": "10.2.0.27",
            "public_ip": "13.235.230.29",
            "subnet_id": "subnet-0fec2bf7f243289bc",
            "tags": {
              "AccountType": "TFTrain",
              "Application": "webserver_hr",
              "Environment": "DEV",
              "Name": "ARA_DEV_ACCT-AZ1",
              "provider": "aws.aravind",
              "region": "ap-south-1"
            }
          },
          "depends_on": [
            "aws_eip.nateip",
            "aws_internet_gateway.gw",
            "aws_subnet.public"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-072b3e5eba1753e4b",
            "id": "nat-0172575478913f528",
            "network_interface_id": "eni-0b5b8a93070c01fb3",
            "private_ip": "10.2.0.43",
            "public_ip": "13.235.218.148",
            "subnet_id": "subnet-0a8f97f39fe045b5b",
            "tags": {
              "AccountType": "TFTrain",
              "Application": "webserver_hr",
              "Environment": "DEV",
              "Name": "ARA_DEV_ACCT-AZ2",
              "provider": "aws.aravind",
              "region": "ap-south-1"
            }
          },
          "depends_on": [
            "aws_eip.nateip",
            "aws_internet_gateway.gw",
            "aws_subnet.public"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06e5bc034642d7b32",
            "id": "nat-05f447b219155f340",
            "network_interface_id": "eni-0edbdcdd94ffee17a",
            "private_ip": "10.2.0.68",
            "public_ip": "13.127.143.143",
            "subnet_id": "subnet-06949c56901770adf",
            "tags": {
              "AccountType": "TFTrain",
              "Application": "webserver_hr",
              "Environment": "DEV",
              "Name": "ARA_DEV_ACCT-AZ3",
              "provider": "aws.aravind",
              "region": "ap-south-1"
            }
          },
          "depends_on": [
            "aws_eip.nateip",
            "aws_internet_gateway.gw",
            "aws_subnet.public"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "networkaclprivate",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0ec3eff1ec7f572bb",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "196269275163",
            "subnet_id": null,
            "subnet_ids": [
              "subnet-05a76cf7f3ed62798",
              "subnet-05f240902e62e4a40",
              "subnet-06f58db90c82289a7"
            ],
            "tags": {
              "AccountType": "TFTrain",
              "Application": "webserver_hr",
              "Environment": "DEV",
              "Name": "Ara_dev_acct-NetworkAcl-Private",
              "provider": "aws.aravind",
              "region": "ap-south-1"
            },
            "vpc_id": "vpc-09d04156cd79466d4"
          },
          "depends_on": [
            "aws_subnet.private",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "networkaclpublic",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0aee062a7493cbe0e",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "196269275163",
            "subnet_id": null,
            "subnet_ids": [
              "subnet-06949c56901770adf",
              "subnet-0a8f97f39fe045b5b",
              "subnet-0fec2bf7f243289bc"
            ],
            "tags": {
              "AccountType": "TFTrain",
              "Application": "webserver_hr",
              "Environment": "DEV",
              "Name": "Ara_dev_acct-NetworkAcl-Public",
              "provider": "aws.aravind",
              "region": "ap-south-1"
            },
            "vpc_id": "vpc-09d04156cd79466d4"
          },
          "depends_on": [
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-09b98a6368d7fed4c1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "nat-03f3a790ce2498bf5",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-09b98a6368d7fed4c",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "depends_on": [
            "aws_nat_gateway.natgateway",
            "aws_route_table.private"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0ac80edac1bb1b580",
            "id": "r-rtb-03a57385e0a7c7b741080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-03a57385e0a7c7b74",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "depends_on": [
            "aws_internet_gateway.gw",
            "aws_route_table.public"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-09b98a6368d7fed4c",
            "owner_id": "196269275163",
            "propagating_vgws": [
              "vgw-0e97c2d7f21473128"
            ],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "nat-03f3a790ce2498bf5",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "AccountType": "TFTrain",
              "Application": "webserver_hr",
              "Environment": "DEV",
              "Name": "Ara_dev_acct-Private-subnet-05f240902e62e4a40",
              "provider": "aws.aravind",
              "region": "ap-south-1"
            },
            "vpc_id": "vpc-09d04156cd79466d4"
          },
          "depends_on": [
            "aws_subnet.private",
            "aws_vpc.main",
            "aws_vpn_gateway.vpn_gw"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-03a57385e0a7c7b74",
            "owner_id": "196269275163",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ac80edac1bb1b580",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "AccountType": "TFTrain",
              "Application": "webserver_hr",
              "Environment": "DEV",
              "Name": "ARA_DEV_ACCT-Public",
              "provider": "aws.aravind",
              "region": "ap-south-1"
            },
            "vpc_id": "vpc-09d04156cd79466d4"
          },
          "depends_on": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0af9e9e0844c654ae",
            "route_table_id": "rtb-09b98a6368d7fed4c",
            "subnet_id": "subnet-05f240902e62e4a40"
          },
          "depends_on": [
            "aws_route_table.private",
            "aws_subnet.private"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b8dc775fe14e127d",
            "route_table_id": "rtb-09b98a6368d7fed4c",
            "subnet_id": "subnet-05a76cf7f3ed62798"
          },
          "depends_on": [
            "aws_route_table.private",
            "aws_subnet.private"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00a8fcd7d05248c49",
            "route_table_id": "rtb-09b98a6368d7fed4c",
            "subnet_id": "subnet-06f58db90c82289a7"
          },
          "depends_on": [
            "aws_route_table.private",
            "aws_subnet.private"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-016b951b2971bee22",
            "route_table_id": "rtb-03a57385e0a7c7b74",
            "subnet_id": "subnet-0fec2bf7f243289bc"
          },
          "depends_on": [
            "aws_route_table.public",
            "aws_subnet.public"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0934569d8182c5ec2",
            "route_table_id": "rtb-03a57385e0a7c7b74",
            "subnet_id": "subnet-0a8f97f39fe045b5b"
          },
          "depends_on": [
            "aws_route_table.public",
            "aws_subnet.public"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-073bc19fea80103f5",
            "route_table_id": "rtb-03a57385e0a7c7b74",
            "subnet_id": "subnet-06949c56901770adf"
          },
          "depends_on": [
            "aws_route_table.public",
            "aws_subnet.public"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "subnet",
      "provider": "module.ec2.provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:196269275163:security-group/sg-023c85fe928ddf0e3",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-023c85fe928ddf0e3",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20191030171059027400000001",
            "name_prefix": null,
            "owner_id": "196269275163",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-09d04156cd79466d4"
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:196269275163:subnet/subnet-05f240902e62e4a40",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.2.0.96/27",
            "id": "subnet-05f240902e62e4a40",
            "map_public_ip_on_launch": false,
            "owner_id": "196269275163",
            "tags": {
              "AccountType": "TFTrain",
              "Application": "webserver_hr",
              "Environment": "DEV",
              "Name": "ARA_DEV_ACCT-Private-A",
              "Type": "Private",
              "provider": "aws.aravind",
              "region": "ap-south-1"
            },
            "vpc_id": "vpc-09d04156cd79466d4"
          },
          "depends_on": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:196269275163:subnet/subnet-05a76cf7f3ed62798",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.2.0.128/27",
            "id": "subnet-05a76cf7f3ed62798",
            "map_public_ip_on_launch": false,
            "owner_id": "196269275163",
            "tags": {
              "AccountType": "TFTrain",
              "Application": "webserver_hr",
              "Environment": "DEV",
              "Name": "ARA_DEV_ACCT-Private-B",
              "Type": "Private",
              "provider": "aws.aravind",
              "region": "ap-south-1"
            },
            "vpc_id": "vpc-09d04156cd79466d4"
          },
          "depends_on": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:196269275163:subnet/subnet-06f58db90c82289a7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "10.2.0.160/27",
            "id": "subnet-06f58db90c82289a7",
            "map_public_ip_on_launch": false,
            "owner_id": "196269275163",
            "tags": {
              "AccountType": "TFTrain",
              "Application": "webserver_hr",
              "Environment": "DEV",
              "Name": "ARA_DEV_ACCT-Private-C",
              "Type": "Private",
              "provider": "aws.aravind",
              "region": "ap-south-1"
            },
            "vpc_id": "vpc-09d04156cd79466d4"
          },
          "depends_on": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:196269275163:subnet/subnet-0fec2bf7f243289bc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.2.0.0/27",
            "id": "subnet-0fec2bf7f243289bc",
            "map_public_ip_on_launch": false,
            "owner_id": "196269275163",
            "tags": {
              "AccountType": "TFTrain",
              "Application": "webserver_hr",
              "Environment": "DEV",
              "Name": "ARA_DEV_ACCT-Public-A",
              "Type": "Public",
              "provider": "aws.aravind",
              "region": "ap-south-1"
            },
            "vpc_id": "vpc-09d04156cd79466d4"
          },
          "depends_on": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:196269275163:subnet/subnet-0a8f97f39fe045b5b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.2.0.32/27",
            "id": "subnet-0a8f97f39fe045b5b",
            "map_public_ip_on_launch": false,
            "owner_id": "196269275163",
            "tags": {
              "AccountType": "TFTrain",
              "Application": "webserver_hr",
              "Environment": "DEV",
              "Name": "ARA_DEV_ACCT-Public-B",
              "Type": "Public",
              "provider": "aws.aravind",
              "region": "ap-south-1"
            },
            "vpc_id": "vpc-09d04156cd79466d4"
          },
          "depends_on": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:196269275163:subnet/subnet-06949c56901770adf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "10.2.0.64/27",
            "id": "subnet-06949c56901770adf",
            "map_public_ip_on_launch": false,
            "owner_id": "196269275163",
            "tags": {
              "AccountType": "TFTrain",
              "Application": "webserver_hr",
              "Environment": "DEV",
              "Name": "ARA_DEV_ACCT-Public-C",
              "Type": "Public",
              "provider": "aws.aravind",
              "region": "ap-south-1"
            },
            "vpc_id": "vpc-09d04156cd79466d4"
          },
          "depends_on": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:196269275163:vpc/vpc-09d04156cd79466d4",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.2.0.0/24",
            "default_network_acl_id": "acl-03967cb5ce334ab5b",
            "default_route_table_id": "rtb-0ff7ac50617b89bbf",
            "default_security_group_id": "sg-0622eb9680bb1f60c",
            "dhcp_options_id": "dopt-3d676f55",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-09d04156cd79466d4",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0ff7ac50617b89bbf",
            "owner_id": "196269275163",
            "tags": {
              "AccountType": "TFTrain",
              "Application": "webserver_hr",
              "Environment": "DEV",
              "Name": "ARA_DEV_ACCT",
              "provider": "aws.aravind",
              "region": "ap-south-1"
            }
          }
        }
      ]
    }
  ]
}